project/src/dependencies/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {

    @apply scroll-smooth;

}

*::-webkit-scrollbar {

    @apply h-[.4rem] w-[.4rem];

}

*::-webkit-scrollbar-track {

    @apply bg-black;

}

*::-webkit-scrollbar-thumb {

    @apply bg-sky-400 rounded-sm;

}

.flex {

    @apply min-w-0;

}

.button, .button-primary {

    @apply px-4 py-2;
    @apply rounded-md text-white font-semibold;
    @apply bg-sky-400 hover:bg-sky-600 duration-300 ease-in-out;

}

.button-secondary {

    @apply px-4 py-2;
    @apply rounded-md text-slate-800 font-semibold;
    @apply bg-yellow-200 hover:bg-yellow-300 duration-300 ease-in-out;

}

.container-lg {

    @apply container mx-auto max-w-screen-xl;

}

form input, form textarea {

    @apply block w-full;
    @apply border-0 rounded-md shadow-sm;
    @apply px-4 py-2;
    @apply placeholder:text-gray-400;
    @apply ring-1 ring-inset ring-gray-300;
    @apply focus:ring-2 focus:ring-inset focus:ring-sky-400 duration-300 ease-in-out;

}

